--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100&display=swap');
+
 :root{
     --branca-principal: #fff;
     --cinza-secundaria: #c0c0c0;
@@ -14,13 +16,36 @@
 body{
     background-color: var(--cor-de-fundo);
     color: var(--branca-principal);
+    font-family: 'Inter', sans-serif;
+}
+
+.container{
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 50% 50%;
 }
 
 .background{
     background-image: url("./img/Background.png");
-    height: 556px;
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
+    background-size: contain;
+}
+
+.container__botao{
+    background-color: var(--botao-azul);
+    border-radius: 5px;
+    padding: 1em;
+    color: var(--branca-principal);
+    text-decoration: none;
+    display: block;
+}
+
+.botao_secundario{
+    background-color: transparent;
+    border: 2px solid var(--branca-principal);
+}
+
+.container__aviso{
+    font-size: 12px;
 }
