--- a/style.css
+++ b/style.css
@@ -33,11 +33,21 @@ body{
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+    align-items: center;
+    text-align: center;
+}
+
+.container__caixa{
+    margin: 0 6em;
 }
 
 .container__titulo{
     font-size: 1.75rem;
     font-weight: 700;
+}
+
+.container__imagem{
+    margin: 1em 0 2em 0;
 }
 
 .container__botao{
@@ -47,6 +57,8 @@ body{
     color: var(--branca-principal);
     text-decoration: none;
     display: block;
+    margin-bottom: 1em;
+    text-align: center;
 }
 
 .botao_secundario{
