--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ body{
 }
 
 .terciario__imagem{
-    width: 80%;
+    width: 70%;
 }
 
 .terciario{
@@ -107,4 +107,6 @@ body{
     font-size: 1rem;
     background-color: var(--botao-azul);
     border-radius: 5px;
+    text-decoration: none;
+    margin-top: 0.1em;
 }
