--- a/style.css
+++ b/style.css
@@ -102,11 +102,15 @@ body{
 }
 
 .descricao__link{
-    padding: 10px;
+    padding: 1em;
     color: var(--branca-principal);
     font-size: 1rem;
     background-color: var(--botao-azul);
     border-radius: 5px;
     text-decoration: none;
-    margin-top: 0.1em;
+    margin-top: 1em;
+}
+
+.container__descritorio{
+    padding: 2em;
 }
