--- a/style.css
+++ b/style.css
@@ -127,9 +127,9 @@ body{
 }
 
 .telas__grupo{
-    height: 100vh;
     display: grid;
     grid-template-columns: 33% 33% 33%;
+    margin-bottom: 8em;
 }
 
 .telas__icon{
